2014-06-17 John Wu <John dot Wu at ACM dot org>
	* src/bundle.cpp:1466 rewrite the conditional test to capture the
	case where the name cn do not match c->name() -- to address a
	problem reported by Hendrik Heinemann <hendrik.heinemann at questback.com>

2014-06-15 John Wu <John dot Wu at ACM dot org>
	* src/bundles.cpp:1500 move the LOGGER statement before push_back

2014-05-22 John Wu <John dot Wu at ACM dot org>
	* autoconfig.ac: remove the prefix 'ibis' from the version number
	based on a recommendation from lscott@kiemaadvisors.com

2014-05-16 Zhongbo Tian <windreamer at gmail dot com>
	* src/mensa.cpp: fix the order of bound check in
	ibis::mensa::cursor::fetch

2014-05-15 John Wu <John dot Wu at ACM dot org>
	* src/mensa.cpp: correct the problems with getColumnAsTTTs (a
	problem identified by Zhongbo Tian
	* src/bord.cpp: switch std::copy to memcpy when the types match in
	getColumnAsTTTs
	* src/selectClause.cpp:197 remove the comparison involving aggr_
	to address a problem reported by Bernd Jaenichen

2014-05-14 John Wu <John dot Wu at ACM dot org>
	* src/countQuery.cpp:425, src/query.cpp:2732 (high.sloppyCount() >
	0) should be (low.sloppyCount() > 0) (an error discovered by a
	test case from Junmin Gu)

2014-05-11 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp: modify bin::print to always print the last bin

2014-05-10 John Wu <John dot Wu at ACM dot org>
	* src/index.h: move printHeader to be a public static member
	function
	* src/ibin.cpp: check whether col is nil before use
	* src/column.h: move template functions for computing min and max
	to be static member functions

2014-05-09 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: change index::create to separate out the portion
	about reading an existing index, allow c=0 in this case

2014-04-29 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp: in bin::parsePrec, change the default precision to
	2 digits; in constructors of ibis::bin, change index spec of nil