@@ -124,7 +124,7 @@ ibis::array_t<T>::array_t(const std::vector<T>& rhs)
 	<< static_cast<void*>(this) << " with actual="
 	<< static_cast<void*>(actual) << ", m_begin="
 	<< static_cast<void*>(m_begin) << " and m_end="
-	<< static_cast<void*>(m_end) << ", copied from "
+	<< static_cast<void*>(m_end) << ", copied from std::vector @ "
 	<< static_cast<const void*>(&rhs);
 }
 
@@ -141,7 +141,7 @@ ibis::array_t<T>::array_t(const array_t<T>& rhs)
 	<< static_cast<void*>(this) << " with actual="
 	<< static_cast<void*>(actual) << ", m_begin="
 	<< static_cast<void*>(m_begin) << " and m_end="
-	<< static_cast<void*>(m_end) << ", copied from "
+	<< static_cast<void*>(m_end) << ", copied from array_t @ "
 	<< static_cast<const void*>(&rhs);
 }
 
@@ -422,7 +422,7 @@ void ibis::array_t<T>::nosharing() {
     if (m_begin != 0 && m_end >= m_begin) { // a well-formed object
 	if (actual == 0 || m_begin != (T*)actual->begin() ||
 	    actual->filename() != 0 || actual->inUse() > 1) {
-	    // follow copy-and-swap strategy
+	    // copy-and-swap
 	    std::unique_ptr<ibis::fileManager::storage>
 		tmp(new ibis::fileManager::storage
 		    (reinterpret_cast<const char*>(m_begin),
